# git-tag-deployment

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
git_tag_deploy/: deployer.py  server.py
